Update home.html to check if pipleine is fully online

--- a/static/home.html
+++ b/static/home.html
@@ -67,10 +67,11 @@
 
     <main>
         <section>
-            <h1>Learn DevOps from Basics</h1>
+            <h1>Learn DevOps from Basics Practiced By Better-Great</h1>
             <p>The main purpose of this website is to guide people on how to learn DevOps 
                 from basics for Free. We will provide you with the best resources to learn.
             </p>
+            <p>Checking if end to end pipeline is fully functional</p>
         </section>
 
         <section>
